fix: input and textarea is not alignment

--- a/renderer/main.scss
+++ b/renderer/main.scss
@@ -35,6 +35,7 @@
 }
 body {
   --td-radius-medium: 16px;
+  --td-comp-size-m: 34px;
 
   height: 100vh;
   opacity: 0;
